--- a/demo/index.html
+++ b/demo/index.html
@@ -52,6 +52,8 @@
 
 </div>
 
+<div zl-scroll="scroll-top scroll-bottom"></div>
+
 <!-- inject:js -->
 <script src="../bower_components/jquery/dist/jquery.js"></script>
 <script src="../bower_components/underscore/underscore-min.js"></script>
