--- a/demo/index.html
+++ b/demo/index.html
@@ -50,9 +50,8 @@
         <!--<div flex apartment-pick-directive pick-community-id="14" pick-building-name="'1-1'" pick-chips="true" ng-model="apartments"></div>-->
     <!--</div>-->
 
+    <div zl-scroll="scroll-top scroll-bottom"></div>
 </div>
-
-<div zl-scroll="scroll-top scroll-bottom"></div>
 
 <!-- inject:js -->
 <script src="../bower_components/jquery/dist/jquery.js"></script>
@@ -65,6 +64,7 @@
 <script src="../js/module.js"></script>
 <script src="../js/directives/ng.zl.focus.on.js"></script>
 <script src="../js/directives/ng.zl.grid.js"></script>
+<script src="../js/directives/ng.zl.scroll.js"></script>
 <script src="../js/services/ng.zl.focus.on.js"></script>
 <script src="../js/services/ng.zl.js"></script>
 <script src="../js/services/ng.zl.sha256.js"></script>
