--- a/demo/index.html
+++ b/demo/index.html
@@ -62,6 +62,7 @@
 <script src="../bower_components/angular-aria/angular-aria.js"></script>
 <script src="../bower_components/angular-material/angular-material.js"></script>
 <script src="../js/module.js"></script>
+<script src="../js/directives/ng.zl.compile.js"></script>
 <script src="../js/directives/ng.zl.focus.on.js"></script>
 <script src="../js/directives/ng.zl.grid.js"></script>
 <script src="../js/directives/ng.zl.scroll.js"></script>
