--- a/demo/index.html
+++ b/demo/index.html
@@ -50,7 +50,7 @@
         <!--<div flex apartment-pick-directive pick-community-id="14" pick-building-name="'1-1'" pick-chips="true" ng-model="apartments"></div>-->
     <!--</div>-->
 
-
+    <input type="date"/>
 
     <div zl-scroll="scroll-top scroll-bottom"></div>
 
