--- a/demo/index.html
+++ b/demo/index.html
@@ -50,7 +50,7 @@
         <!--<div flex apartment-pick-directive pick-community-id="14" pick-building-name="'1-1'" pick-chips="true" ng-model="apartments"></div>-->
     <!--</div>-->
 
-    <input type="date"/>
+    <div zl-compile html="{{htmlstr}}"></div>
 
     <div zl-scroll="scroll-top scroll-bottom"></div>
 
@@ -66,6 +66,7 @@
 <script src="../bower_components/angular-material/angular-material.js"></script>
 <script src="../js/module.js"></script>
 <script src="../js/directives/ng.zl.compile.js"></script>
+<script src="../js/directives/ng.zl.dy.compile.js"></script>
 <script src="../js/directives/ng.zl.focus.on.js"></script>
 <script src="../js/directives/ng.zl.grid.js"></script>
 <script src="../js/directives/ng.zl.scroll.js"></script>
