--- a/demo/index.html
+++ b/demo/index.html
@@ -50,6 +50,8 @@
         <!--<div flex apartment-pick-directive pick-community-id="14" pick-building-name="'1-1'" pick-chips="true" ng-model="apartments"></div>-->
     <!--</div>-->
 
+    <button type="button" id="uploadFile">Upload</button>
+
     <div zl-scroll="scroll-top scroll-bottom"></div>
 
 </div>
@@ -62,6 +64,7 @@
 <script src="../bower_components/angular-animate/angular-animate.js"></script>
 <script src="../bower_components/angular-aria/angular-aria.js"></script>
 <script src="../bower_components/angular-material/angular-material.js"></script>
+<script src="../js/common/uploadifive/jquery.uploadifive.min.js"></script>
 <script src="../js/module.js"></script>
 <script src="../js/directives/ng.zl.compile.js"></script>
 <script src="../js/directives/ng.zl.dy.compile.js"></script>
@@ -71,6 +74,7 @@
 <script src="../js/services/ng.zl.focus.on.js"></script>
 <script src="../js/services/ng.zl.js"></script>
 <script src="../js/services/ng.zl.sha256.js"></script>
+<script src="../js/services/ng.zl.uploader.js"></script>
 <script src="templates.min.js"></script>
 <script src="app.js"></script>
 <!-- endinject -->
