--- a/demo/index.html
+++ b/demo/index.html
@@ -16,6 +16,8 @@
     <div ng-controller="DialogController">
         <md-button ng-click="onAlert($event)">alert</md-button>
         <md-button ng-click="onConfirm($event)">confirm</md-button>
+        <md-button ng-click="onPrompt($event)">prompt</md-button>
+
         <md-button ng-click="onToast()">toast</md-button>
         <md-button ng-click="onProgressStart()">progress start</md-button>
         <md-button ng-click="onProgressDone()">progress done</md-button>
