--- a/demo/index.html
+++ b/demo/index.html
@@ -72,6 +72,7 @@
 <script src="../bower_components/angular-aria/angular-aria.js"></script>
 <script src="../bower_components/angular-material/angular-material.js"></script>
 <script src="../bower_components/FileSaver/FileSaver.min.js"></script>
+<script src="../js/compatibility.js"></script>
 <script src="../js/common/uploadifive/jquery.uploadifive.min.js"></script>
 <script src="../js/module.js"></script>
 <script src="../js/module.pick.js"></script>
