--- a/demo/index.html
+++ b/demo/index.html
@@ -10,29 +10,25 @@
     <link rel="stylesheet" href="../css/ng.zl.css">
     <!-- endinject -->
 </head>
-<body ng-controller="DemoController">
-<a href="pick.html">pick.html</a>
-<div>
-    <div ng-controller="DialogController">
-        <md-button ng-click="onAlert($event)">alert</md-button>
-        <md-button ng-click="onConfirm($event)">confirm</md-button>
-        <md-button ng-click="onPrompt($event)">prompt</md-button>
+<body>
+<a href="pick.html">pick</a>
+<a href="grid.html">grid</a>
 
-        <md-button ng-click="onToast()">toast</md-button>
-        <md-button ng-click="onProgressStart()">progress start</md-button>
-        <md-button ng-click="onProgressDone()">progress done</md-button>
-    </div>
+<div ng-controller="DialogController">
+    <md-button ng-click="onAlert($event)">alert</md-button>
+    <md-button ng-click="onConfirm($event)">confirm</md-button>
+    <md-button ng-click="onPrompt($event)">prompt</md-button>
 
-    <div ng-controller="GridController">
-        <md-button class="md-raised" ng-click="onExport()">export to csv</md-button>
-        <div zl-grid config="gridData"></div>
-    </div>
-
-    <button type="button" id="uploadFile">Upload</button>
-
-    <div zl-scroll="scroll-top scroll-bottom"></div>
-
+    <md-button ng-click="onToast()">toast</md-button>
+    <md-button ng-click="onProgressStart()">progress start</md-button>
+    <md-button ng-click="onProgressDone()">progress done</md-button>
 </div>
+
+<div ng-controller="UploaderController">
+    <button type="button" id="uploadFile">Upload</button>
+</div>
+
+<div zl-scroll="scroll-top scroll-bottom"></div>
 
 
 <!-- inject:js -->
@@ -66,6 +62,68 @@
 <script src="templates.min.js"></script>
 <script src="app.js"></script>
 <!-- endinject -->
+<script>
+    myModule.controller('UploaderController', function ($scope, $zlUploader, $zl) {
+        'use strict';
 
+        $zlUploader.imgUpload($('#uploadFile'), {
+            uploadScript: '/admin/address/importAddressInfos',
+            onUploadComplete: function (file, data) {
+                data = angular.fromJson(data);
+                if (data.errorCode === 200) {
+                    $scope.$apply(function () {
+                        $zl.tips('上传成功');
+                    });
+                } else {
+                    $scope.$apply(function () {
+                        $zl.tips(data.errorDescription || '未知错误');
+                    });
+                }
+            }
+        });
+
+    }).controller('DialogController', function ($scope, $timeout, $zl) {
+
+        'use strict';
+
+        $scope.onAlert = function (event) {
+            $zl.alert('asdf', 'asdf', event).then(function () {
+                window.console.log('after alert');
+            });
+        };
+
+        $scope.onConfirm = function (event) {
+            $zl.confirm('a', 'bbbb', event).then(function () {
+                window.console.log('after confirm ok');
+            }, function () {
+                window.console.log('after confirm cancel');
+            });
+        };
+
+        $scope.onPrompt = function (event) {
+            $zl.prompt('a', 'bbbb', event).then(function (word) {
+                window.console.log('after prompt ok' + word);
+            }, function () {
+                window.console.log('after prompt cancel');
+            });
+        };
+
+        var num = 1;
+        $scope.onToast = function () {
+            num++;
+            $zl.tips('1111 ' + num).then(function () {
+                window.console.log('after toast');
+            });
+        };
+
+        $scope.onProgressStart = function () {
+            $zl.progress.start();
+        };
+
+        $scope.onProgressDone = function () {
+            $zl.progress.done();
+        };
+    });
+</script>
 </body>
 </html>
