add grid edit ever

--- a/demo/grid.html
+++ b/demo/grid.html
@@ -73,7 +73,7 @@
                     editData: editData,
                     afterEdit: afterEditGender
                 },
-                {field: 'isOk', name: '是否', export: exportIsOk, edit: true, editType: 'switch', afterEdit: afterEditOk}
+                {field: 'isOk', name: '是否', export: exportIsOk, edit: true, editType: 'switch', editEver: true, afterEdit: afterEditOk}
             ],
             actions: [{
                 type: 'btn',
