--- a/demo/index.html
+++ b/demo/index.html
@@ -11,10 +11,14 @@
     <!-- endinject -->
 </head>
 <body>
-<a href="pick.html">pick</a>
-<a href="grid.html">grid</a>
+<div>
+    <h1>Other</h1>
+    <a href="pick.html">pick</a>
+    <a href="grid.html">grid</a>
+</div>
 
 <div ng-controller="DialogController">
+    <h1>Dialog</h1>
     <md-button ng-click="onAlert($event)">alert</md-button>
     <md-button ng-click="onConfirm($event)">confirm</md-button>
     <md-button ng-click="onPrompt($event)">prompt</md-button>
@@ -25,7 +29,15 @@
 </div>
 
 <div ng-controller="UploaderController">
+    <h1>Upload</h1>
     <button type="button" id="uploadFile">Upload</button>
+</div>
+
+<div ng-controller="ProgressController">
+    <h1>Progress</h1>
+    <p>会显示在右上角转圈</p>
+    <button ng-click="start()">start</button>
+    <button ng-click="done()">done</button>
 </div>
 
 <div zl-scroll="scroll-top scroll-bottom"></div>
@@ -61,69 +73,7 @@
 <script src="../js/services/ng.zl.uploader.js"></script>
 <script src="templates.min.js"></script>
 <script src="app.js"></script>
+<script src="index.js"></script>
 <!-- endinject -->
-<script>
-    myModule.controller('UploaderController', function ($scope, $zlUploader, $zl) {
-        'use strict';
-
-        $zlUploader.imgUpload($('#uploadFile'), {
-            uploadScript: '/admin/address/importAddressInfos',
-            onUploadComplete: function (file, data) {
-                data = angular.fromJson(data);
-                if (data.errorCode === 200) {
-                    $scope.$apply(function () {
-                        $zl.tips('上传成功');
-                    });
-                } else {
-                    $scope.$apply(function () {
-                        $zl.tips(data.errorDescription || '未知错误');
-                    });
-                }
-            }
-        });
-
-    }).controller('DialogController', function ($scope, $timeout, $zl) {
-
-        'use strict';
-
-        $scope.onAlert = function (event) {
-            $zl.alert('asdf', 'asdf', event).then(function () {
-                window.console.log('after alert');
-            });
-        };
-
-        $scope.onConfirm = function (event) {
-            $zl.confirm('a', 'bbbb', event).then(function () {
-                window.console.log('after confirm ok');
-            }, function () {
-                window.console.log('after confirm cancel');
-            });
-        };
-
-        $scope.onPrompt = function (event) {
-            $zl.prompt('a', 'bbbb', event).then(function (word) {
-                window.console.log('after prompt ok' + word);
-            }, function () {
-                window.console.log('after prompt cancel');
-            });
-        };
-
-        var num = 1;
-        $scope.onToast = function () {
-            num++;
-            $zl.tips('1111 ' + num).then(function () {
-                window.console.log('after toast');
-            });
-        };
-
-        $scope.onProgressStart = function () {
-            $zl.progress.start();
-        };
-
-        $scope.onProgressDone = function () {
-            $zl.progress.done();
-        };
-    });
-</script>
 </body>
 </html>
